# Event-System

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
event_system/: alembic.ini  events.json
event_system/migrations/: env.py
event_system/migrations/versions/: da3aff9beb2c_create_events_table.py
event_system/services/event_consumer/api/: main.py
event_system/services/event_consumer/models/: event.py
event_system/services/event_consumer/repositories/: event_repository.py
event_system/services/event_consumer/schemas/: event.py
event_system/services/event_consumer/templates/: metrics.html
event_system/services/event_propagator/: main.py
event_system/shared/: errors.py
event_system/shared/config/: settings.py
event_system/shared/utils/: logging.py
tests/: conftest.py  test_config.py
tests/api/: test_api.py
tests/repository/: test_event_repository.py
tests/schema/: test_event_schema.py
